# openMulle

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
assets/: rooms.json
openMulle/: Cargo.toml
openMulle/.cargo/: config.toml
openMulle/src/: main.rs  render.rs  screens.rs  systems.rs
openMulle/src/parsers/: database_language.rs
openMulle/src/render/: scaler.rs
openMulle/src/screens/: garage.rs  trash_heap.rs  world_drive.rs  yard.rs
openMulle/src/systems/: mulle_asset_helper.rs  mulle_car.rs  mulle_point_and_click.rs
src/: main.rs  parsers.rs  screens.rs  systems.rs
src/parsers/: database_language.rs
src/render/: scaler.rs
src/screens/: garage.rs  trash_heap.rs  world_drive.rs  yard.rs
src/systems/: mulle_asset_helper.rs  mulle_car.rs  mulle_point_and_click.rs
