[package]
name = "open_mulle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15"
serde = { version = "1.0.159" , features = ["derive"] }
serde_json = "1.0.96"
regex = "1.10.2"
lazy_static = "1.4.0"
yore = "1.1.0"
byteorder = "1.5.0"
bincode = "1.3.3"
nom = "7.1.3"
toml = "0.8.19"
